탭과 터치 연습 앱을 위한 기본 환경 구성하기

--- a/TabTouch/TabTouch/Base.lproj/Main.storyboard
+++ b/TabTouch/TabTouch/Base.lproj/Main.storyboard
@@ -108,6 +108,11 @@
                             <constraint firstItem="mMW-KY-gWc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ceV-Pz-6Az"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="txtMessage" destination="4Js-oR-RKP" id="6VE-Kh-va4"/>
+                        <outlet property="txtTabCount" destination="qWf-2P-G0q" id="d7h-rx-REb"/>
+                        <outlet property="txtTouchCount" destination="wf6-V7-nI1" id="5Wv-1f-gWd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
