--- a/SwipeGesture/SwipeGesture/Base.lproj/Main.storyboard
+++ b/SwipeGesture/SwipeGesture/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="DTj-UD-YPT">
-                                <rect key="frame" x="16" y="322" width="358" height="216"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="DTj-UD-YPT">
+                                <rect key="frame" x="16" y="314" width="358" height="216"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow-up-black.png" translatesAutoresizingMaskIntoConstraints="NO" id="liQ-U1-qAE">
                                         <rect key="frame" x="0.0" y="0.0" width="358" height="72"/>
@@ -54,6 +54,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="DTj-UD-YPT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0Sl-TC-FbK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DTj-UD-YPT" secondAttribute="trailing" constant="16" id="elK-Q7-UHa"/>
                             <constraint firstItem="DTj-UD-YPT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="y6t-yG-p4d"/>
                         </constraints>
