--- a/FirebaseEx/FirebaseEx/Base.lproj/Main.storyboard
+++ b/FirebaseEx/FirebaseEx/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="メールでログインする">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="21"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="onBtnLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M4F-Bw-AmG"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ddl-ck-BcK">
                                 <rect key="frame" x="87" y="285" width="241" height="66"/>
