--- a/FirebaseEx/FirebaseEx/Base.lproj/Main.storyboard
+++ b/FirebaseEx/FirebaseEx/Base.lproj/Main.storyboard
@@ -86,6 +86,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="イメージファイルアップロード">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="21"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <segue destination="Vir-nz-AZy" kind="show" id="C4t-9z-zWP"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -153,6 +156,37 @@
             </objects>
             <point key="canvasLocation" x="1557.9710144927537" y="128.57142857142856"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="FYp-6f-JSi">
+            <objects>
+                <viewController id="Vir-nz-AZy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="H1v-BN-hwz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="2YT-Ut-KiN">
+                                <rect key="frame" x="73" y="88" width="245" height="304"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.19159602557340555" green="0.93686496087883298" blue="0.99942404029999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLD-8K-GfP">
+                                <rect key="frame" x="66" y="418" width="259" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="画像をアップロードする">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="21"/>
+                                </buttonConfiguration>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="e3E-bJ-vtw"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="5wg-gd-OL5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b6o-XQ-5mB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2224.6376811594205" y="128.57142857142856"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="rQ4-yK-JCv">
             <objects>
@@ -171,8 +205,24 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="128.57142857142856"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="glz-yO-oAa">
+            <objects>
+                <viewController id="vPb-wj-msh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="prw-Hf-PGv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="m32-Ui-axI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XcJ-cd-5sK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1297" y="-544"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="image1" width="512" height="512"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
